name:                tcp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cscherrer/tcp#readme
license:             BSD3
license-file:        LICENSE
author:              Chad Scherrer
maintainer:          chad.scherrer@gmail.com
copyright:           value
category:            value
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.News
                     , Scaffold
  build-depends:       base >= 4.7 && < 5
                     , unordered-containers
                     , containers
                     , monads-tf
                     , hashable
                     , bytestring
                     , directory
                     , filepath
                     , vector
                     , mwc-random
                     , hakaru
                     , logfloat
  default-language:    Haskell2010

executable tcp
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tcp
                     , unordered-containers
                     , bytestring
                     , mwc-random
  default-language:    Haskell2010

test-suite tcp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tcp
                     , unordered-containers
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cscherrer/tcp
